--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,12 +35,12 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#39c;
+  color:#444;
   text-decoration:none;
 }
 
 a:hover {
-  color:#069;
+  color:#000;
 }
 
 a small {
@@ -86,8 +86,7 @@ table {
 
 th, td {
   text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
+  padding:5px 0;
 }
 
 dt {
