--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         <table>
-          {% for nav in site.navigation %}
-            <tr><th><a href="{{ nav.anchor }}">{{ nav.title }}</a></th></tr>
+          {% for title in site.list %}
+            <tr><th><a href="#{{ title }}">{{ title }}</a></th></tr>
           {% endfor %}
         </table>
       </header>
