--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,11 +14,11 @@
       <header>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-        <table>
+        <!--<table>
           {% for title in site.list %}
             <tr><th><a href="#{{ title }}">{{ title }}</a></th></tr>
           {% endfor %}
-        </table>
+        </table>-->
       </header>
       <section>
         {{ content }}
