--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,11 +14,15 @@
       <header>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-        <!--<table>
-          {% for title in site.list %}
-            <tr><th><a href="#{{ title }}">{{ title }}</a></th></tr>
+        <table>
+          {% for nav in site.navigation %}
+            {% if nav.url contains "://" %}
+              <tr><th><a href="{{ nav.url }}">{{ nav.title }}</a></th></tr>
+            {% else %}
+              <tr><th><a href="{{ nav.url | relative_url }}">{{ nav.title }}</a></th></tr>
+            {% endif %}
           {% endfor %}
-        </table>-->
+        </table>
       </header>
       <section>
         {{ content }}
